<resources>
    <string name="app_name">MyOmer</string>
    <string name="base_url">https://jsonplaceholder.typicode.com/</string>

    <string name="permission_denied_by_system">Permission denied by system</string>
    <string name="permission_denied">Permission denied</string>

    <string name="title_activity_waiting_screen">WaitingScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_journal">Journal</string>
    <string name="title_exercise">Exercise</string>
    <string name="title_video">Video</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="notification">Notification</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="no_internet">No internet connection available</string>
    <string name="server_error">Server error, please try again after some time.</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="err_email">Please enter email</string>
    <string name="err_valid_email">Please enter valid email</string>
    <string name="err_first_name">Please enter first name</string>
    <string name="err_last_name">Please enter last name</string>
    <string name="continue_txt">Continue</string>
    <string name="help_message">Register your MyOmer account:</string>
    <string name="download_now">MyOmer: 49 Steps to Personal Refinement. Get the app for daily exercises and omer reminders.\n</string>
    <string name="email_willnot_spam">* your email will never be shared or used to spam you</string>
    <string name="enable_gps">Please allow application to access gps location.</string>
    <string name="enable_gps_accurracy">Please turn ON gps location and set gps accuracy to high.</string>
    <string name="skip">Skip</string>
</resources>