<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="#9AD4D1"
    android:orientation="vertical"
    tools:context=".activities.UserFormActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@android:color/transparent">

        <LinearLayout
            android:id="@+id/rootview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/txtSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_22sdp"
                android:paddingLeft="@dimen/_20sdp"
                android:fontFamily="@font/bikoregular"
                android:shadowColor="@android:color/black"
                android:shadowDx="3"
                android:shadowDy="3"
                android:shadowRadius="3"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_20sdp"
                android:text="@string/skip"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14ssp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="@dimen/_80sdp"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:src="@drawable/logo" />


                <TextView
                    android:id="@+id/infotext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="@dimen/_20sdp"
                    android:layout_marginRight="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/bikoregular"
                    android:gravity="center_horizontal"
                    android:lineSpacingExtra="@dimen/_3sdp"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/help_message"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />


<!--                <com.google.android.material.textfield.TextInputLayout-->
<!--                    android:id="@+id/inputEmail"-->
<!--                    style="@style/TextInputLayoutStyle"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="@dimen/_20sdp"-->
<!--                    android:hint="@string/email">-->

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtEmail"
                        style="@style/EdittextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:imeOptions="actionDone"
                        android:hint="@string/email"
                        android:layout_marginStart="@dimen/_20sdp"
                        android:background="@drawable/email_background"
                        android:layout_marginEnd="@dimen/_20sdp"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/gray"
                        android:inputType="textEmailAddress" />

<!--                </com.google.android.material.textfield.TextInputLayout>-->

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputFirstname"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtFirstname"
                        style="@style/EdittextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:imeOptions="actionNext"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/inputLastname"
                    style="@style/TextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtLastname"
                        style="@style/EdittextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_50sdp"
                        android:imeOptions="actionDone"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>



                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnContinue"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/white"
                    android:text="@string/continue_txt"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:textSize="@dimen/_16ssp"
                    android:textAllCaps="true"
                    android:textColor="#3C3B3B" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_60sdp"
                android:orientation="vertical">



                <TextView
                    android:id="@+id/txtBottomInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/bikoregular"
                    android:gravity="center_horizontal"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="2"
                    android:text="@string/email_willnot_spam"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>